[gd_scene load_steps=10 format=3 uid="uid://ejes7yxh6hiq"]

[ext_resource type="Script" uid="uid://be01c3hvcb6n8" path="res://scripts/title_screen.gd" id="1_e2uq4"]
[ext_resource type="Texture2D" uid="uid://bnmj2f13c532c" path="res://sprites/title-screen.jpg" id="2_e2uq4"]
[ext_resource type="Texture2D" uid="uid://d0jjdxvolos74" path="res://sprites/game_logo.jpg" id="2_miun2"]
[ext_resource type="AudioStream" uid="uid://dmhwlgf22j245" path="res://sons/tilescren_sfx.mp3" id="3_7l4cn"]

[sub_resource type="Theme" id="Theme_miun2"]

[sub_resource type="Theme" id="Theme_7l4cn"]

[sub_resource type="Animation" id="Animation_pyya3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e2uq4"]
resource_name = "reveal"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.66667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarginContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.3, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lt7pn"]
_data = {
&"RESET": SubResource("Animation_pyya3"),
&"reveal": SubResource("Animation_e2uq4")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e2uq4")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
scale = Vector2(0.844078, 0.844078)
texture = ExtResource("2_e2uq4")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -376.0
offset_top = 17.0
offset_right = -148.0
offset_bottom = 233.0
grow_horizontal = 0
scale = Vector2(1.34106, 1.34106)
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="game_logo" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_miun2")

[node name="start_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_miun2")
text = "START"

[node name="credits_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_7l4cn")
text = "CREDITS"

[node name="quit_btn" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT GAME"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7l4cn")
autoplay = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lt7pn")
}
autoplay = "reveal"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start_btn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/credits_btn" to="." method="_on_credits_btn_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/quit_btn" to="." method="_on_quit_btn_pressed"]
